--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link href='font.css' rel='stylesheet' type='text/css'>
 		<link href='font2.css' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="maincss.css"><!-- INCLUDES THE CSS FRAMEWORK VIA #IMPORT AND SASS -->
-		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+		<link rel="shortcut icon" type="image/png" href="main_logo.png"/>
 </head>
 	<body class="qt-debug-disabled">
 	<!-- QT HEADER END ================================ -->
@@ -25,7 +25,7 @@
 			<div class="qt-valign-wrapper">
 				<div class="qt-valign">
 					<div class="container center-align"  data-50p-top="opacity:1;margin-top:0px" data-30p-top="opacity:1;" data-0p-top="opacity:0;margin-top:-700px">
-						<img src="images/logo.png" class="logo" alt="Sonik template">
+						<img src="images/main_logo.png" class="logo" alt="Sonik template">
 						<h4>DJ KNACK BHOPAL</h4>
 						<a class="btn btn-primary" target="_blank" href="tel:+916264418793">GET IN TOUCH</a>
 					</div>
@@ -41,23 +41,23 @@
 			<nav id="stickymenu" class="qt-menu grey-text text-lighten-4">
 				<!-- desktop menu -->
 				<ul class="qt-desktopmenu">
-					<li><a href="#home" class="qwsmoothscroll">Home</a></li>
-					<li><a href="#music" class="qwsmoothscroll">Music</a></li>
-					<li><a href="#photos" class="qwsmoothscroll">Photos</a></li>
-					<li><a href="#bio" class="qwsmoothscroll">Bio</a></li>
-					<li><a href="#booking" class="qwsmoothscroll">Booking</a></li>
-					<li><a href="#presskit" class="qwsmoothscroll">Presskit</a></li>
-					<li><a href="#video" class="qwsmoothscroll">Video</a></li>
+					<li><a href="#" class="qwsmoothscroll">Home</a></li>
+					<li><a href="#" class="qwsmoothscroll">Music</a></li>
+					<li><a href="#" class="qwsmoothscroll">Photos</a></li>
+					<li><a href="#" class="qwsmoothscroll">Bio</a></li>
+					<li><a href="#" class="qwsmoothscroll">Booking</a></li>
+					<li><a href="#" class="qwsmoothscroll">Presskit</a></li>
+					<li><a href="#" class="qwsmoothscroll">Video</a></li>
 				</ul>
 				<!-- mobile menu -->
 				<ul id="slide-out" class="side-nav qt-mobilemenu">
-					<li><a href="#home" class="qwsmoothscroll">Home</a></li>
-					<li><a href="#music" class="qwsmoothscroll">Music</a></li>
-					<li><a href="#photos" class="qwsmoothscroll">Photos</a></li>
-					<li><a href="#bio" class="qwsmoothscroll">Bio</a></li>
-					<li><a href="#booking" class="qwsmoothscroll">Booking</a></li>
-					<li><a href="#presskit" class="qwsmoothscroll">Presskit</a></li>
-					<li><a href="#video" class="qwsmoothscroll">Video</a></li>
+					<li><a href="#" class="qwsmoothscroll">Home</a></li>
+					<li><a href="#" class="qwsmoothscroll">Music</a></li>
+					<li><a href="#" class="qwsmoothscroll">Photos</a></li>
+					<li><a href="#" class="qwsmoothscroll">Bio</a></li>
+					<li><a href="#" class="qwsmoothscroll">Booking</a></li>
+					<li><a href="#" class="qwsmoothscroll">Presskit</a></li>
+					<li><a href="#" class="qwsmoothscroll">Video</a></li>
 				</ul>
 				<a href="#" data-activates="slide-out" class="button-collapse qt-menu-switch"><span class="lnr lnr-menu"></span></a>
 			</nav>
@@ -79,50 +79,50 @@
 				<div class="carousel qt-gridstackCarousel" data-vpadding="50" data-time_constant="500"   data-dist="-30"  data-shift="-20" data-padding="20" data-full_width="0" data-100p-top="opacity:0;" data-80p-top="opacity:0;" data-50p-top="opacity:1;" data-30p-top="opacity:1;" data-top-bottom="opacity:0;">
 
 					<div class="carousel-item">
-						<img src="images/album-8.jpg"  width="300" height="300" alt="Album title">
+						<img src="images/first.jpg"  width="300" height="300" alt="Album title">
 						<h5>The Mercury Sun</h5>
 						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/171764879&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
 
 					</div>
 
 					<div class="carousel-item">
-						<img src="images/album-1.jpg"  width="300" height="300" alt="Album title">
+						<img src="images/two.jpg"  width="300" height="300" alt="Album title">
 						<h5>Soun Killers EP</h5>
 						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/240890020&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"><span class="lnr lnr-music-note"></span></a>
 					</div>
 
 					<div class="carousel-item">
-						<img src="images/album-3.jpg"  width="300" height="300" alt="Album title">
+						<img src="images/three.jpg"  width="300" height="300" alt="Album title">
 						<h5>A Trip To Mars</h5>
 						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
 					</div>
 
 					<div class="carousel-item">
-						<img src="images/album-4.jpg"  width="300" height="300" alt="Album title">
+						<img src="images/four.jpg"  width="300" height="300" alt="Album title">
 						<h5>Technodelic</h5>
 						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/171764879&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
 					</div>
 
 					<div class="carousel-item">
-						<img src="images/album-5.jpg"  width="300" height="300" alt="Album title">
+						<img src="images/five.jpg"  width="300" height="300" alt="Album title">
 						<h5>Born sinners</h5>
 						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/240890020&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"><span class="lnr lnr-music-note"></span></a>
 					</div>
 
 					<div class="carousel-item">
-						<img src="images/album-6.jpg"  width="300" height="300" alt="Album title">
+						<img src="images/six.jpg"  width="300" height="300" alt="Album title">
 						<h5>Dark Spektre</h5>
 						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
 					</div>
 
 					<div class="carousel-item">
-						<img src="images/album-7.jpg"  width="300" height="300" alt="Album title">
+						<img src="images/seven.jpg"  width="300" height="300" alt="Album title">
 						<h5>Supernova</h5>
 						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
 					</div>
 
 					<div class="carousel-item">
-						<img src="images/album-2.jpg"  width="300" height="300" alt="Album title">
+						<img src="images/eight.jpg"  width="300" height="300" alt="Album title">
 						<h5>Space Journey</h5>
 						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
 					</div>
@@ -190,7 +190,7 @@
 		<!-- ====================== SECTION BIOGRAPHY END ================================================ -->
 
 		<!-- ====================== SECTION BOOKING AND CONTACTS ================================================ -->
-		<div id="booking" class="section section-booking qt-fullscreen scrollspy  qt-polydecor poly3">
+		<!-- <div id="booking" class="section section-booking qt-fullscreen scrollspy  qt-polydecor poly3">
 			<div class="qt-valign-wrapper">
 				<div class="qt-valign flow-text">
 					<h2 class="qt-section-title" data-100p-top="opacity:0;" data-80p-top="opacity:0;" data-30p-top="opacity:1;" >BOOKING<i class="deco"></i></h2>
@@ -252,12 +252,12 @@
 					</div>
 		    	</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- ====================== SECTION BOOKING AND CONTACTS END ================================================ -->
 
 
 		<!-- ====================== SECTION PRESSKIT ================================================ -->
-		<div id="presskit" class="section section-presskit parallax-container scrollspy" >
+		<!-- <div id="presskit" class="section section-presskit parallax-container scrollspy" >
 			<div class="parallax"><img src="images/galaxy-2.jpg" alt="background"></div>
 			<div class="qt-polydecor poly4">
 			
@@ -273,7 +273,7 @@
 					
 			</div> 
 			<div class="qt-particles" id="particlesbio" data-color="#ffffff" data-opacity="0.9" data-speed="1"></div>
-		</div>
+		</div> -->
 		<!-- ====================== SECTION PRESSKIT END ================================================ -->
 
 		<!-- ====================== SECTION VIDEOS ================================================ -->
@@ -302,14 +302,14 @@
 		<footer class="qt-footer parallax-container blue-grey-text text-lighten-5">
 			<div class="parallax"><img src="images/galaxy-3.jpg" alt="background"></div>
 			<div class="container center-align"  >
-				<h3 class="qt-footertitle"><img src="images/logo-footer.png" alt="Sonik Music HTML template"></h3>
-				<h5>Copyright 2016 <a href="http://qantumthemes.com">QANTUMTHEMES</a>: TOP MUSIC WEBSITES.</h5>
+				<h3 class="qt-footertitle"><img src="images/logo-footer.png" alt="DJ KNACK"></h3>
+				<h5>Copyright 2025 <a href="tel:+6264263949">@Jerry</a></h5>
 				<p class="qt-social">
-					<a href="#"><span class="qticon-beatport"></span></a>
+					<!-- <a href="#"><span class="qticon-beatport"></span></a>
 					<a href="#"><span class="qticon-facebook"></span></a>
 					<a href="#"><span class="qticon-twitter"></span></a>
 					<a href="#"><span class="qticon-youtube"></span></a>
-					<a href="#"><span class="qticon-soundcloud"></span></a>
+					<a href="#"><span class="qticon-soundcloud"></span></a> -->
 				</p>
 			</div>
 			<div class="qt-particles" id="particlesfooter" data-color="#ffffff" data-opacity="0.2" data-speed="1"></div>
