--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>SONIK HTML TEMPLATE</title>
+		<title>DJ KNACK BEST DJ IN BHOPAL</title>
 		<meta name="description" content="The Incredible Music HTML Template">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link href='main.css' rel='stylesheet' type='text/css'>
@@ -14,6 +14,7 @@
 		<link href='font2.css' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="maincss.css"><!-- INCLUDES THE CSS FRAMEWORK VIA #IMPORT AND SASS -->
 		<link rel="shortcut icon" type="image/png" href="main_logo.png"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 	<body class="qt-debug-disabled">
 	<!-- QT HEADER END ================================ -->
@@ -41,23 +42,19 @@
 			<nav id="stickymenu" class="qt-menu grey-text text-lighten-4">
 				<!-- desktop menu -->
 				<ul class="qt-desktopmenu">
-					<li><a href="#" class="qwsmoothscroll">Home</a></li>
-					<li><a href="#" class="qwsmoothscroll">Music</a></li>
-					<li><a href="#" class="qwsmoothscroll">Photos</a></li>
-					<li><a href="#" class="qwsmoothscroll">Bio</a></li>
-					<li><a href="#" class="qwsmoothscroll">Booking</a></li>
-					<li><a href="#" class="qwsmoothscroll">Presskit</a></li>
-					<li><a href="#" class="qwsmoothscroll">Video</a></li>
+					<li><a href="#Home" class="qwsmoothscroll">Home</a></li>
+					<li><a href="#Music" class="qwsmoothscroll">Music</a></li>
+					<li><a href="#Photos" class="qwsmoothscroll">Photos</a></li>
+					<li><a href="#Bio" class="qwsmoothscroll">Bio</a></li>
+					<li><a href="#Video" class="qwsmoothscroll">Video</a></li>
 				</ul>
 				<!-- mobile menu -->
 				<ul id="slide-out" class="side-nav qt-mobilemenu">
-					<li><a href="#" class="qwsmoothscroll">Home</a></li>
-					<li><a href="#" class="qwsmoothscroll">Music</a></li>
-					<li><a href="#" class="qwsmoothscroll">Photos</a></li>
-					<li><a href="#" class="qwsmoothscroll">Bio</a></li>
-					<li><a href="#" class="qwsmoothscroll">Booking</a></li>
-					<li><a href="#" class="qwsmoothscroll">Presskit</a></li>
-					<li><a href="#" class="qwsmoothscroll">Video</a></li>
+					<li><a href="#Home" class="qwsmoothscroll">Home</a></li>
+					<li><a href="#Music" class="qwsmoothscroll">Music</a></li>
+					<li><a href="#Photos" class="qwsmoothscroll">Photos</a></li>
+					<li><a href="#Bio" class="qwsmoothscroll">Bio</a></li>
+					<li><a href="#Video" class="qwsmoothscroll">Video</a></li>
 				</ul>
 				<a href="#" data-activates="slide-out" class="button-collapse qt-menu-switch"><span class="lnr lnr-menu"></span></a>
 			</nav>
@@ -190,69 +187,26 @@
 		<!-- ====================== SECTION BIOGRAPHY END ================================================ -->
 
 		<!-- ====================== SECTION BOOKING AND CONTACTS ================================================ -->
-		<!-- <div id="booking" class="section section-booking qt-fullscreen scrollspy  qt-polydecor poly3">
+		<div id="booking" class="section section-booking qt-fullscreen scrollspy  qt-polydecor poly3">
 			<div class="qt-valign-wrapper">
 				<div class="qt-valign flow-text">
 					<h2 class="qt-section-title" data-100p-top="opacity:0;" data-80p-top="opacity:0;" data-30p-top="opacity:1;" >BOOKING<i class="deco"></i></h2>
 					<div class="qt-booking-form">
 						<ul class="tabs">
-					        <li class="tab col s6"><h5><a href="#form" class="active">Booking form</a></h5></li>
 					        <li class="tab col s6"><h5><a href="#contacts">Contacts</a></h5></li>
 					    </ul>
-						<div id="form" class="row">
-						    <form class="col s12" method="post" action="email_sender.php">
-						    	<input type="hidden" name="antispam" value="x123">
-						    	<h4 class="center-align">Get in touch!</h4>
-						      	<div class="row">
-							        <div class="input-field col s6">
-							          <input name="first_name" id="first_name" type="text" class="validate">
-							          <label for="first_name">First Name</label>
-							        </div>
-							        <div class="input-field col s6">
-							          <input name="last_name" id="last_name" type="text" class="validate">
-							          <label for="last_name">Last Name</label>
-							        </div>
-						      	</div>
-						      	<div class="row">
-							        <div class="input-field col s12">
-							          <input name="email" id="email" type="email" class="validate">
-							          <label for="email">Email</label>
-							        </div>
-						      	</div>
-						      	<div class="row">
-							        <div class="input-field col s12">
-								      	<textarea name="message" id="message" class="materialize-textarea" maxlength="300"></textarea>
-				            			<label for="message">Message</label>
-				            		</div>
-				            	</div>
-				            	<div class="row">
-							        <div class="input-field col s12">
-								      	<input name="privacy" type="checkbox" id="privacy" value="1" />
-		      							<label for="privacy">I red and accept the <a href="#" target="_blank">privacy terms</a>.</label>
-				            		</div>
-				            	</div>
-
-				            	<div class="row">
-							        <div class="input-field col s12">
-								      	<p><button class="btn waves-effect waves-light" type="submit" name="action">
-									    	<span class="lnr lnr-rocket"></span> Submit
-									  	</button></p>
-				            		</div>
-				            	</div>
-						    </form>
-					  	</div>
 					  	<div id="contacts" class="row qt-contacts">
 					  		<div class="col s12">
 					  			<h4 class="center-align">Our contacts</h4>
-					  			<p><span class="lnr lnr-smartphone"></span><span>+44 443 53 2324</span></p>
-					  			<p><span class="lnr lnr-pencil"></span><span>info@bookmenow.com</span></p>
-					  			<p><span class="lnr lnr-location"></span><span>Road Avenue, California</span></p>
+					  			<a href="tel:+916264418793"> <p><span class="lnr lnr-smartphone"> <i class="fa-solid fa-mobile"></i> </span><span> +916264418793 </span></p> </a>
+					  			<a href=""> <p><span class="lnr lnr-pencil"> <i class="fa-solid fa-pencil"> </i> </span><span> MAIL ID </span></p> </a>
+					  			<a href=""> <p><span class="lnr lnr-location"> <i class="fa-solid fa-location-dot"></i> </span><span>Bhopal, Madhya Pradesh</span></p> </a>
 					  		</div>
 					  	</div>
 					</div>
 		    	</div>
 			</div>
-		</div> -->
+		</div>
 		<!-- ====================== SECTION BOOKING AND CONTACTS END ================================================ -->
 
 
@@ -302,7 +256,7 @@
 		<footer class="qt-footer parallax-container blue-grey-text text-lighten-5">
 			<div class="parallax"><img src="images/galaxy-3.jpg" alt="background"></div>
 			<div class="container center-align"  >
-				<h3 class="qt-footertitle"><img src="images/logo-footer.png" alt="DJ KNACK"></h3>
+				<h3 class="qt-footertitle"><img src="images/main_logo.png" alt="DJ KNACK"></h3>
 				<h5>Copyright 2025 <a href="tel:+6264263949">@Jerry</a></h5>
 				<p class="qt-social">
 					<!-- <a href="#"><span class="qticon-beatport"></span></a>
