--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 
 		<!-- ====================== SECTION PRESSKIT ================================================ -->
-		<!-- <div id="presskit" class="section section-presskit parallax-container scrollspy" >
+		<div id="presskit" class="section section-presskit parallax-container scrollspy" >
 			<div class="parallax"><img src="images/galaxy-2.jpg" alt="background"></div>
 			<div class="qt-polydecor poly4">
 			
@@ -220,14 +220,14 @@
 								<h2 class="qt-section-title">PRESSKIT<i class="deco"></i></h2>
 								<h4 class="center-align">You can download my official presskit here:</h4>
 								<p class="center-align">
-									<a class="btn waves-effect waves-light btn-large" href="downloads/presskit.zip" target="_blank">DOWNLOAD</a>
+									<a class="btn waves-effect waves-light btn-large" href="data/presskit.pdf" target="_blank">DOWNLOAD</a>
 								</p>
 							</div>
 						</div>
 					
 			</div> 
 			<div class="qt-particles" id="particlesbio" data-color="#ffffff" data-opacity="0.9" data-speed="1"></div>
-		</div> -->
+		</div>
 		<!-- ====================== SECTION PRESSKIT END ================================================ -->
 
 		<!-- ====================== SECTION VIDEOS ================================================ -->
