--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
 					<div class="content qt-polydecor poly2">
 
 						<h4>Career</h4>
-						One common flaw we've seen in many frameworks is a lack of support for truly responsive text. While elements on the page resize fluidly, text still resizes on a fixed basis. To ameliorate this problem, for text heavy pages, we've created a class that fluidly scales text size and line-height to optimize readability for the user. Line length stays between 45-80 characters and line height scales to be larger on smaller screens.
+              I'm Kartik Verma, popularly known as DJ Knack — a high-energy performer with a love for music and crowd connection. Since entering the scene in 2022, I’ve performed across clubs and events in India, building a name for my dynamic sets and vibrant stage presence.
 
-						To see Flow Text in action, slowly resize your browser and watch the size of this text body change! Use the button above to toggle off/on flow-text to see the difference!
+  My journey started with a deep passion for rhythm, which evolved into a signature style that keeps the energy high and the dance floor alive. For me, music isn’t just entertainment — it’s how I express identity and create unforgettable moments.
 
 						<h4>Collabs</h4>
 
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nulla nibh, ultricies posuere elit ut, pretium varius arcu. Nulla congue velit vitae erat posuere, at malesuada ex imperdiet. In in cursus nisl, ac vehicula tellus. Sed elementum urna eu eros tempus, ac lacinia augue blandit. Suspendisse potenti. Nunc feugiat, purus at consectetur varius, nibh lacus fermentum lacus, ac semper turpis justo ullamcorper lectus. Donec suscipit, ligula ut consectetur vehicula, est purus hendrerit quam, non interdum augue est et urna. Morbi auctor elit id orci euismod, ac lacinia orci porttitor. Aenean gravida sapien mauris, eget gravida est viverra id. Nulla nulla lectus, faucibus vel ornare et, commodo sit amet lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec eget dignissim dui, eget placerat dui. Maecenas malesuada, erat at tempus vehicula, urna purus consectetur eros, at varius orci ex et ligula.
+						Over the years, I’ve collaborated with a diverse range of artists, from local underground talents to renowned performers across India’s nightlife circuit. Each collaboration has pushed my creative limits—fusing genres, sharing stage energy, and delivering unforgettable nights. Whether it’s back-to-back DJ sets, remixes, or curated event lineups, these experiences have shaped my journey, added new flavor to my sound, and built long-lasting bonds in the industry. Together, we've moved crowds, created moments, and set dance floors on fire. Collaboration, for me, isn’t just working with others—it’s about connecting vibes, respecting craft, and amplifying the collective energy that music brings alive.
 					</div>
 				</div>
 			</div>
@@ -187,26 +187,55 @@
 		<!-- ====================== SECTION BIOGRAPHY END ================================================ -->
 
 		<!-- ====================== SECTION BOOKING AND CONTACTS ================================================ -->
-		<div id="booking" class="section section-booking qt-fullscreen scrollspy  qt-polydecor poly3">
-			<div class="qt-valign-wrapper">
-				<div class="qt-valign flow-text">
-					<h2 class="qt-section-title" data-100p-top="opacity:0;" data-80p-top="opacity:0;" data-30p-top="opacity:1;" >BOOKING<i class="deco"></i></h2>
-					<div class="qt-booking-form">
-						<ul class="tabs">
-					        <li class="tab col s6"><h5><a href="#contacts">Contacts</a></h5></li>
-					    </ul>
-					  	<div id="contacts" class="row qt-contacts">
-					  		<div class="col s12">
-					  			<h4 class="center-align">Our contacts</h4>
-					  			<a href="tel:+916264418793"> <p><span class="lnr lnr-smartphone"> <i class="fa-solid fa-mobile"></i> </span><span> +916264418793 </span></p> </a>
-					  			<a href=""> <p><span class="lnr lnr-pencil"> <i class="fa-solid fa-pencil"> </i> </span><span> MAIL ID </span></p> </a>
-					  			<a href=""> <p><span class="lnr lnr-location"> <i class="fa-solid fa-location-dot"></i> </span><span>Bhopal, Madhya Pradesh</span></p> </a>
-					  		</div>
-					  	</div>
-					</div>
-		    	</div>
-			</div>
-		</div>
+    <div id="booking" class="section section-booking qt-fullscreen scrollspy qt-polydecor poly3" style="background-color: #111; padding: 60px 20px;">
+      <div class="qt-valign-wrapper">
+        <div class="qt-valign flow-text">
+          <h2 class="qt-section-title" style="text-align:center; font-size: 36px; color: #fff; margin-bottom: 40px; letter-spacing: 1px;">
+            FEEL FREE TO CONTACT<i class="deco"></i>
+          </h2>
+
+          <div class="qt-booking-form" style="max-width: 600px; margin: auto; background-color: #1a1a1a; padding: 30px; border-radius: 12px; box-shadow: 0 0 20px rgba(255, 0, 60, 0.2);">
+            <div id="contacts" class="row qt-contacts">
+              <div class="col s12" style="text-align: left;">
+
+                <!-- Instagram -->
+                <a href="https://www.instagram.com/dj_knack?igsh=MTU1ejBxMjN4ZGNsNg==" target="_blank" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
+                  <i class="fab fa-instagram" style="color:#E4405F; font-size: 26px; width: 35px;"></i>
+                  <span style="margin-left: 12px;">@dj_knack</span>
+                </a>
+
+                <!-- Email -->
+                <a href="mailto:djknack04@gmail.com" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
+                  <i class="fas fa-envelope" style="color:#EA4335; font-size: 26px; width: 35px;"></i>
+                  <span style="margin-left: 12px;">djknack04@gmail.com</span>
+                </a>
+
+                <!-- Phone -->
+                <a href="tel:+916264418793" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
+                  <i class="fas fa-phone" style="color:#34A853; font-size: 26px; width: 35px;"></i>
+                  <span style="margin-left: 12px;">+91-6264418793</span>
+                </a>
+
+                <!-- YouTube -->
+                <a href="https://youtube.com/@djknack04" target="_blank" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
+                  <i class="fab fa-youtube" style="color:#FF0000; font-size: 26px; width: 35px;"></i>
+                  <span style="margin-left: 12px;">djknack04</span>
+                </a>
+
+                <!-- Location -->
+                <div style="display: flex; align-items: center; margin-top: 25px; color: #fff;">
+                  <i class="fas fa-location-dot" style="color:#FFD700; font-size: 26px; width: 35px;"></i>
+                  <span style="margin-left: 12px;">Bhopal, Madhya Pradesh</span>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
 		<!-- ====================== SECTION BOOKING AND CONTACTS END ================================================ -->
 
 
