--- a/index.html
+++ b/index.html
@@ -174,11 +174,9 @@
 
 						<h4>Career</h4>
               I'm Kartik Verma, popularly known as DJ Knack — a high-energy performer with a love for music and crowd connection. Since entering the scene in 2022, I’ve performed across clubs and events in India, building a name for my dynamic sets and vibrant stage presence.
-
-  My journey started with a deep passion for rhythm, which evolved into a signature style that keeps the energy high and the dance floor alive. For me, music isn’t just entertainment — it’s how I express identity and create unforgettable moments.
+              My journey started with a deep passion for rhythm, which evolved into a signature style that keeps the energy high and the dance floor alive. For me, music isn’t just entertainment — it’s how I express identity and create unforgettable moments.
 
 						<h4>Collabs</h4>
-
 						Over the years, I’ve collaborated with a diverse range of artists, from local underground talents to renowned performers across India’s nightlife circuit. Each collaboration has pushed my creative limits—fusing genres, sharing stage energy, and delivering unforgettable nights. Whether it’s back-to-back DJ sets, remixes, or curated event lineups, these experiences have shaped my journey, added new flavor to my sound, and built long-lasting bonds in the industry. Together, we've moved crowds, created moments, and set dance floors on fire. Collaboration, for me, isn’t just working with others—it’s about connecting vibes, respecting craft, and amplifying the collective energy that music brings alive.
 					</div>
 				</div>
@@ -199,7 +197,7 @@
               <div class="col s12" style="text-align: left;">
 
                 <!-- Instagram -->
-                <a href="https://www.instagram.com/dj_knack?igsh=MTU1ejBxMjN4ZGNsNg==" target="_blank" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
+                <a href="https://www.instagram.com/dj_knack" target="_blank" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
                   <i class="fab fa-instagram" style="color:#E4405F; font-size: 26px; width: 35px;"></i>
                   <span style="margin-left: 12px;">@dj_knack</span>
                 </a>
@@ -217,7 +215,7 @@
                 </a>
 
                 <!-- YouTube -->
-                <a href="https://youtube.com/@djknack04" target="_blank" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
+                <a href="https://youtube.com/@djknack_04?si=eC-F7phnupb94nUW" target="_blank" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
                   <i class="fab fa-youtube" style="color:#FF0000; font-size: 26px; width: 35px;"></i>
                   <span style="margin-left: 12px;">djknack04</span>
                 </a>
