--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               <div class="col s12" style="text-align: left;">
 
                 <!-- Instagram -->
-                <a href="https://www.instagram.com/dj_knack" target="_blank" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
+                <a href="https://www.instagram.com/_dj_knack_/#" target="_blank" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
                   <i class="fab fa-instagram" style="color:#E4405F; font-size: 26px; width: 35px;"></i>
                   <span style="margin-left: 12px;">@dj_knack</span>
                 </a>
