--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
                   <span style="margin-left: 12px;">@dj_knack</span>
                 </a>
 
+                <!-- Snapchat -->
+                <a href="https://www.snapchat.com/add/kartikverma_01?share_id=LhNZvRamTlo&locale=en-IN" target="_blank" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
+                  <i class="fab fa-snapchat-ghost" style="color:#FFFC00; font-size: 26px; width: 35px;"></i>
+                  <span style="margin-left: 12px;">@_djknack04</span>
+                </a>
+
                 <!-- Email -->
                 <a href="mailto:djknack04@gmail.com" style="display: flex; align-items: center; margin-bottom: 20px; text-decoration: none; color: #fff;">
                   <i class="fas fa-envelope" style="color:#EA4335; font-size: 26px; width: 35px;"></i>
