--- a/index.html
+++ b/index.html
@@ -283,19 +283,19 @@
             <!-- Video 1 -->
             <div>
               <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/shorts/FheXl3GP_OI">
-                <img src="images/video1.jpg" alt="video" style="width:100%; border-radius:8px;">
+                <img src="images/black_pearl.avif" alt="video" style="width:100%; border-radius:8px;">
                 <span class="lnr lnr-film-play" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 36px; color: white;"></span>
               </a>
-              <h5 style="text-align:center; color:#fff;">Hyte Party Ibiza</h5>
+              <h5 style="text-align:center; color:#fff;">The Black Pearl</h5>
             </div>
 
             <!-- Video 2 -->
             <div>
-              <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/shorts/FheXl3GP_OI">
-                <img src="images/video2.jpg" alt="video" style="width:100%; border-radius:8px;">
+              <a class="venobox" data-autoplay="true" data-vbtype="video" href="data/video1.mp4">
+                <img src="images/kasturi_resort.jpg" alt="video" style="width:100%; border-radius:8px;">
                 <span class="lnr lnr-film-play" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 36px; color: white;"></span>
               </a>
-              <h5 style="text-align:center; color:#fff;">Felix Crocher live</h5>
+              <h5 style="text-align:center; color:#fff;">The Grand Kasturi Resort</h5>
             </div>
 
             <!-- Video 3 -->
