--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
 					<div class="carousel-item">
 						<img src="images/first.jpg"  width="300" height="300" alt="Album title">
 						<h5>The Mercury Sun</h5>
-						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/171764879&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
+						<a href="data/music1.mp4" class="btn modal-trigger"><span class="lnr lnr-music-note"></span></a>
 
 					</div>
 
 					<div class="carousel-item">
 						<img src="images/two.jpg"  width="300" height="300" alt="Album title">
 						<h5>Soun Killers EP</h5>
-						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/240890020&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"><span class="lnr lnr-music-note"></span></a>
+						<a href="data/music1.mp4" class="btn modal-trigger" ><span class="lnr lnr-music-note"></span></a>
 					</div>
 
 					<div class="carousel-item">
 						<img src="images/three.jpg"  width="300" height="300" alt="Album title">
 						<h5>A Trip To Mars</h5>
-						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
+						<a href="data/music1.mp4" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
 					</div>
 
 					<div class="carousel-item">
@@ -162,14 +162,14 @@
 		<div id="photos" class="section section-photos black scrollspy">
 			<h2 class="qt-section-title" data-100p-top="opacity:0;" data-80p-top="opacity:0;" data-50p-top="opacity:1;">PHOTOS<i class="deco"></i></h2>
 			<div class="qtgallery"  data-bottom-top="opacity:0;" data-center-top="opacity:1;">
-			  	<div><img src="images/gallery1.jpg"  alt="photo"/></div>
-			  	<div><img src="images/gallery2.jpg"  alt="photo"/></div>
-			  	<div><img src="images/gallery3.jpg"  alt="photo"/></div>
-			  	<div><img src="images/gallery4.jpg"  alt="photo"/></div>
-			  	<div><img src="images/gallery5.jpg"  alt="photo"/></div>
-			  	<div><img src="images/gallery6.jpg"  alt="photo"/></div>
-			  	<div><img src="images/gallery7.jpg"  alt="photo"/></div>
-			  	<div><img src="images/gallery8.jpg"  alt="photo"/></div>
+			  	<div><img src="images/IMG_20250316_125130.jpg"  alt="photo"/></div>
+			  	<div><img src="images/1735565176144.jpg"  alt="photo"/></div>
+			  	<div><img src="images/1735822644925.jpg"  alt="photo"/></div>
+			  	<div><img src="images/1735831131531.jpg"  alt="photo"/></div>
+			  	<div><img src="images/1735831264231.jpg"  alt="photo"/></div>
+			  	<div><img src="images/IMG_20250316_125130.jpg"  alt="photo"/></div>
+			  	<div><img src="images/DJI_20241231205749_0016_D.JPG"  alt="photo"/></div>
+			  	<div><img src="images/1735831131531.jpg"  alt="photo"/></div>
 			</div>
 		</div>
 		<!-- ====================== SECTION PHOTOS END ================================================ -->
@@ -300,31 +300,30 @@
 
             <!-- Video 3 -->
             <div>
-              <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/shorts/FheXl3GP_OI">
-                <img src="images/video3.jpg" alt="video" style="width:100%; border-radius:8px;">
+              <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/shorts/8m50QAv_kOE">
+                <img src="images/rang_barse.jpg" alt="video" style="width:100%; border-radius:8px;">
                 <span class="lnr lnr-film-play" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 36px; color: white;"></span>
               </a>
-              <h5 style="text-align:center; color:#fff;">Nicole Moudaber live</h5>
+              <h5 style="text-align:center; color:#fff;"> Rang Barse 2025 </h5>
             </div>
 
             <!-- Video 4 -->
             <div>
               <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/shorts/FheXl3GP_OI">
-                <img src="images/video4.jpg" alt="video" style="width:100%; border-radius:8px;">
+                <img src="images/bonbeeta.png" alt="video" style="width:100%; border-radius:8px;">
                 <span class="lnr lnr-film-play" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 36px; color: white;"></span>
               </a>
-              <h5 style="text-align:center; color:#fff;">Hardwell live</h5>
+              <h5 style="text-align:center; color:#fff;"> BON VOYAGE 3.0 </h5>
             </div>
 
             <!-- Video 5 -->
-            <div>
+            <!-- <div>
               <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/shorts/FheXl3GP_OI">
                 <img src="images/video5.jpg" alt="video" style="width:100%; border-radius:8px;">
                 <span class="lnr lnr-film-play" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 36px; color: white;"></span>
               </a>
               <h5 style="text-align:center; color:#fff;">Maceo Plex live</h5>
-            </div>
-
+            </div> -->
           </div>
         </div>
       </div>
@@ -341,7 +340,6 @@
 			<div class="parallax"><img src="images/galaxy-3.jpg" alt="background"></div>
 			<div class="container center-align"  >
 				<h3 class="qt-footertitle"><img src="images/main_logo.png" alt="DJ KNACK"></h3>
-				<h5>Copyright 2025 <a href="tel:+6264263949">@Jerry</a></h5>
 				<p class="qt-social">
 					<!-- <a href="#"><span class="qticon-beatport"></span></a>
 					<a href="#"><span class="qticon-facebook"></span></a>
