--- a/index.html
+++ b/index.html
@@ -83,57 +83,72 @@
 			<h2 class="qt-section-title" data-100p-top="opacity:0;" data-80p-top="opacity:0;" data-50p-top="opacity:1;" data-30p-top="opacity:1;" data-8p-top="opacity:1;" data-0p-top="opacity:0;">MUSIC<i class="deco"></i></h2>
 			<div id="carouselmusic" class="qt-gridstackCarousel-container">
 				<!-- ========= ALBUM LIST ===================================== -->
-				<div class="carousel qt-gridstackCarousel" data-vpadding="50" data-time_constant="500"   data-dist="-30"  data-shift="-20" data-padding="20" data-full_width="0" data-100p-top="opacity:0;" data-80p-top="opacity:0;" data-50p-top="opacity:1;" data-30p-top="opacity:1;" data-top-bottom="opacity:0;">
 
-					<div class="carousel-item">
-						<img src="images/first.jpg"  width="300" height="300" alt="Album title">
+				<audio id="audioPlayer" style="display:none;"></audio>
+
+				<!-- Carousel -->
+				<div class="carousel qt-gridstackCarousel" data-vpadding="50" data-time_constant="500"
+					data-dist="-30" data-shift="-20" data-padding="20" data-full_width="0"
+					data-100p-top="opacity:0;" data-80p-top="opacity:0;" data-50p-top="opacity:1;"
+					data-30p-top="opacity:1;" data-top-bottom="opacity:0;">
+
+					<div class="carousel-item" data-audio="data/music2.mp3">
+						<img src="images/first.jpg" width="300" height="300" alt="Album title">
 						<h5>The Mercury Sun</h5>
-						<a href="data/music1.mp4" class="btn modal-trigger"><span class="lnr lnr-music-note"></span></a>
-
 					</div>
 
-					<div class="carousel-item">
-						<img src="images/two.jpg"  width="300" height="300" alt="Album title">
-						<h5>Soun Killers EP</h5>
-						<a href="data/music1.mp4" class="btn modal-trigger" ><span class="lnr lnr-music-note"></span></a>
+					<div class="carousel-item" data-audio="data/music3.mp3">
+						<img src="images/two.jpg" width="300" height="300" alt="Album title">
+						<h5>Sound Killers EP</h5>
 					</div>
 
-					<div class="carousel-item">
-						<img src="images/three.jpg"  width="300" height="300" alt="Album title">
+					<div class="carousel-item" data-audio="data/music4.mp3">
+						<img src="images/three.jpg" width="300" height="300" alt="Album title">
 						<h5>A Trip To Mars</h5>
-						<a href="data/music1.mp4" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
 					</div>
 
-					<div class="carousel-item">
-						<img src="images/four.jpg"  width="300" height="300" alt="Album title">
+					<div class="carousel-item" data-audio="data/music5.mp3">
+						<img src="images/four.jpg" width="300" height="300" alt="Album title">
 						<h5>Technodelic</h5>
-						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/171764879&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
 					</div>
 
-					<div class="carousel-item">
-						<img src="images/five.jpg"  width="300" height="300" alt="Album title">
-						<h5>Born sinners</h5>
-						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/240890020&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"><span class="lnr lnr-music-note"></span></a>
+					<div class="carousel-item" data-audio="data/music2.mp3">
+						<img src="images/five.jpg" width="300" height="300" alt="Album title">
+						<h5>Born Sinners</h5>
 					</div>
 
-					<div class="carousel-item">
-						<img src="images/six.jpg"  width="300" height="300" alt="Album title">
-						<h5>Dark Spektre</h5>
-						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
-					</div>
-
-					<div class="carousel-item">
-						<img src="images/seven.jpg"  width="300" height="300" alt="Album title">
-						<h5>Supernova</h5>
-						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
-					</div>
-
-					<div class="carousel-item">
-						<img src="images/eight.jpg"  width="300" height="300" alt="Album title">
-						<h5>Space Journey</h5>
-						<a href="#modal1" class="btn modal-trigger" data-iframe="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/239027362&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"><span class="lnr lnr-music-note"></span></a>
-					</div>
 				</div>
+
+				<!-- JS to handle play/pause toggle -->
+				<script>
+					const audioPlayer = document.getElementById('audioPlayer');
+					let currentAudioSrc = '';
+
+					document.querySelectorAll('.carousel-item').forEach(item => {
+						item.addEventListener('click', () => {
+							const newSrc = item.getAttribute('data-audio');
+
+							// If new song clicked
+							if (newSrc !== currentAudioSrc) {
+								audioPlayer.src = newSrc;
+								currentAudioSrc = newSrc;
+								audioPlayer.play().catch(err => {
+									console.error("Playback error:", err);
+									alert("Playback blocked by browser. Tap again.");
+								});
+							} else {
+								// Same song clicked → toggle play/pause
+								if (audioPlayer.paused) {
+									audioPlayer.play();
+								} else {
+									audioPlayer.pause();
+								}
+							}
+						});
+					});
+				</script>
+
+
 				<!-- ========= ALBUM LIST END ===================================== -->
 				<!-- ========= CAROUSEL CONTROLS ===================================== -->
 				<div class="nav hide-on-med-and-down">
@@ -163,12 +178,10 @@
 			<h2 class="qt-section-title" data-100p-top="opacity:0;" data-80p-top="opacity:0;" data-50p-top="opacity:1;">PHOTOS<i class="deco"></i></h2>
 			<div class="qtgallery"  data-bottom-top="opacity:0;" data-center-top="opacity:1;">
 			  	<div><img src="images/IMG_20250316_125130.jpg"  alt="photo"/></div>
-			  	<div><img src="images/1735565176144.jpg"  alt="photo"/></div>
-			  	<div><img src="images/1735822644925.jpg"  alt="photo"/></div>
 			  	<div><img src="images/1735831131531.jpg"  alt="photo"/></div>
 			  	<div><img src="images/1735831264231.jpg"  alt="photo"/></div>
+			  	<div><img src="images/rang_barse.jpg"  alt="photo"/></div>
 			  	<div><img src="images/IMG_20250316_125130.jpg"  alt="photo"/></div>
-			  	<div><img src="images/DJI_20241231205749_0016_D.JPG"  alt="photo"/></div>
 			  	<div><img src="images/1735831131531.jpg"  alt="photo"/></div>
 			</div>
 		</div>
