--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 		<footer class="qt-footer parallax-container blue-grey-text text-lighten-5">
 			<div class="parallax"><img src="images/galaxy-3.jpg" alt="background"></div>
 			<div class="container center-align"  >
-				<h3 class="qt-footertitle"><img src="images/main_logo.png" alt="DJ KNACK"></h3>
+				<h3 class="qt-footertitle"><img src="images/main_logo.png" alt="DJ KNACK" style="height: 80px; width: 300px;"></h3>
 				<p class="qt-social">
 					<!-- <a href="#"><span class="qticon-beatport"></span></a>
 					<a href="#"><span class="qticon-facebook"></span></a>
